@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.198 2005/11/29 01:23:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.199 2005/12/02 03:21:39 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  1 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
+  added DHCP options to CC screen
 
   28 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   rename Client Config screen to Pre-install Config
